2008-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/SDCCpeeph.c.c (callFuncByName):
	  Commented function parameters.

2008-03-17 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c (packRegsForAccUse2):
	  disabled a broken accumulator packing optimization (fixed #1292721).
	* support/regression/tests/bug-1292721: Regression test for #1292721.

2008-03-16 Raphael Neider <rneider AT web.de>

	* src/pic/gen.c (SetIrp,genNearPointerGet,genNearPointerSet):
	  fixed code bloat regression using a variant of patch #1915618

2008-03-16 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added section debugging macros, added SDCC
	  icon, changed startup menu for release distribution, code cleaning,
	  create url files instead links in startup menu

2008-03-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/SDCCcse.c (algebraicOpts): fixed bug 1579949
	* support/regression/tests/bug1579949.c: new, added

2008-03-14 Paul Stoffregen <paul AT pjrc.com>

	* device/lib/printf_fast.c: fixed bug 1255403

2008-03-14 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: enhanced paragraph about bankswitching for mcs51
	* src/cdbFile.c (cdbWriteBasicSymbol): fixed bug 1909409 for locals

2008-03-14 Borut Razem <borut.razem AT siol.net>

	* as/doc/asmlnk.doc, as/doc/asxhtm.html: updated link-xx and aslink
	  command line options
	* as/link/hc08/lkmain.c: converted tabs to spaces so that the usage
	  is correctly displayed
	* as/link/z80/lkmain.c: usage line commented out

2008-03-13 Borut Razem <borut.razem AT siol.net>

	* doc/sdccman.lyx: corrected to be able to convert to PDF,
	  updated the list pf supported pic14 devices

2008-03-12 Maarten Brock <sourceforge.brock AT dse.nl>

	* doc/sdccman.lyx: added paragraph about bankswitching for mcs51

2008-03-12 Borut Razem <borut.razem AT siol.net>

	* as/doc/asmlnk.doc, as/doc/asxhtm.html: updated command line options,
	  fixed documentation request #1718191